--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,7 +6,7 @@
 
 html {
 	font-size: 16px;
-	background-color: $bg-light;
+	background-color: #fff;
 	font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
